--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
  Limits app visibility in the Google Play Store to ARCore supported devices
          (https://developers.google.com/ar/devices).
     -->
-    
     <uses-feature
         android:name="android.hardware.camera.ar"
         android:required="true" />
@@ -23,16 +22,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TGPARCore">
+        <activity android:name=".activity.GalleryActivity"
+            android:configChanges="orientation|screenSize"
 
-
-        <activity
-            android:name=".activity.FilamentActivity"
-            android:screenOrientation= "fullSensor"
-            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"/>
-
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
 
         <activity
-            android:name=".activity.Navigation"
+            android:name=".activity.NavigationActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true"
             android:screenOrientation="locked"
@@ -43,17 +40,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".activity.SceneForm"
-            android:configChanges="orientation|screenSize"
-            android:exported="true"
-            android:screenOrientation="locked"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
-
-
-        <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.SceneFormActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true"
             android:screenOrientation="locked"
@@ -62,8 +50,6 @@
         <meta-data
             android:name="com.google.ar.core"
             android:value="required" />
-
-
     </application>
 
 </manifest>
