--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TGPARCore">
+
         <activity android:name=".activity.NavigationActivity"
             android:configChanges="orientation|screenSize"
-
             android:theme="@style/Theme.AppCompat.NoActionBar"
             />
 
@@ -43,12 +43,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activity.SceneFormActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true"
-            android:screenOrientation="locked"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:screenOrientation="locked" />
 
         <meta-data
             android:name="com.google.ar.core"
