--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation 'com.github.Mika-89:Screenshot:master-SNAPSHOT'
+    implementation 'com.jraska:falcon:2.2.0'
+
 }
